--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: node_js
 node_js:
   - "0.10"
-before_install:
-  - wget http://phantomjs.googlecode.com/files/phantomjs-1.7.0-linux-i686.tar.bz2
-  - tar -xf phantomjs-1.7.0-linux-i686.tar.bz2
-  - sudo rm -rf /usr/local/phantomjs
-  - sudo mv phantomjs-1.7.0-linux-i686 /usr/local/phantomjs
+before_install: npm install -g grunt-cli
+install: npm install
